# DualSiLi22Na

./: .gitignore  22Na_0.raw  22Na_05.raw  22Na_1.raw  22Na_25.raw  22Na_T.raw  CMakeLists.txt  README.md
analysis/: combine_shards_to_parquet.py  plot_validation.py
analysis/notebooks/: compare_sili_sum_511_gate_b0_b1.ipynb  dual_sili_22na_spectrum_analysis.ipynb  fit_bT_linear_combination_b0_b1.ipynb  fit_physical_b_reweighting.ipynb  optimize_bT_mixture_fit.ipynb
aws/: README.md  bootstrap_ubuntu_24_04.sh  run_production_ubuntu.sh
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorParameters.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh  TrackingAction.hh
macros/: batch.mac  run_10000.mac  run_50000000.mac  run_b0_reweight_base_aws_2B.mac  run_importance_hpge_triple.mac  run_positron_only_1M.mac  vis.mac  vis_qt.mac
scripts/: run_local.sh  run_multiprocess.sh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc  TrackingAction.cc  main.cc
